Fix card__info padding on small screens

--- a/src/blocks/modules/card/card.scss
+++ b/src/blocks/modules/card/card.scss
@@ -31,7 +31,7 @@
 		display: flex;
 		flex-direction: column;
 		justify-content: center;
-		padding: 0 8px;
+		padding: 0 16px;
 		min-height: 304px;
 
 		@media screen and (min-width: $break_xl) {
